--- a/2-way-path.html
+++ b/2-way-path.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>2 Way Path</title>
+<title>Choose Your Path</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p {
+  font-family: verdana;
+}
+a {
+  font-family: verdana;
+  font-size: 110%;
+  padding: 10px
+}
+</style>
 </head>
 <body>
 
 <h1>Choose Your Path</h1>
-<p>You've reached a fork in the path. Which way will you go? What can be on the left? What can be on the right?</p>
+
+<p>You've reached a fork in the path. <br>
+Which way will you go? What can be on the left? What can be on the right?</p>
+
 <a href="rainforest.html">Go Left</a>
 <img src="2-way-path.jpeg" alt="A fork in the path" style="width:600px">
 <a href="to-the-beach.html">Go Right</a>
