--- a/dolphins.html
+++ b/dolphins.html
@@ -2,13 +2,27 @@
 <html>
 <head>
 <title>The Ocean</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p, a {
+  font-family: verdana;
+}
+</style>
 </head>
 <body>
 
 <h1>Jumping Dolphins</h1>
-<p>Wow! There's jumping dolphins! Bottlenose dolphins can swim as fast as 22 miles per hour, but they usually cruise at 5 miles per hour.</p>
+
+<p>Wow! There's jumping dolphins! <br>
+Bottlenose dolphins can swim as fast as 22 miles per hour, but they usually cruise at 5 miles per hour.</p>
+
 <img src="dolphins.jpeg" alt="3 jumping dolphins" style="width:600px">
-<br><br>
-<a href="sunset.html">Head back to the beach</a>
+
+<p>Do you want to <a href="shark.html">continue snorkeling?</a><br>
+Or go <a href="sunset.html">back to the beach?</a>
+</p>
+
 </body>
 </html>
