--- a/hiking.html
+++ b/hiking.html
@@ -2,11 +2,24 @@
 <html>
 <head>
 <title>Hiking</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p, a {
+  font-family: verdana;
+}
+</style>
 </head>
 <body>
 
-<h1>Hiking</h1>
-<p>The path heads upward. Click on the opening at the top of the trail to hike to the top.</p>
+<h1>Hiking to the Top</h1>
+
+<p>The path heads upward and it's a little steep. <br>
+Click on the opening at the top of the trail to reach the top.<br>
+But something just flew past you! <a href="parrots.html">What was it?</a>
+</p>
+
 <img src="path-upward.jpg" alt="A steep trail in the rainforest" usemap="#workmap" style="width:600px">
 <map name="workmap">
   <area shape="circle" coords="289,112,30" alt="The top of the path" href="waterfall.html">
