--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html>
 <head>
 <title>Olivia Joy Cacdac</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p, a {
+  font-family: verdana;
+}
+</style>
 </head>
 <body>
 
 <h1>Begin Your Nature Adventure</h1>
+
 <p>You have started at the beginning of the path. Click on the path to continue.</p>
+
 <a href="2-way-path.html">
    <img src="start-path.jpeg" alt="A straight path between trees" style="width:600px">
 </a>
-<br>
 
 </body>
 </html>
