--- a/parrots.html
+++ b/parrots.html
@@ -2,14 +2,25 @@
 <html>
 <head>
 <title>Parrots</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p, a {
+  font-family: verdana;
+}
+</style>
 </head>
 <body>
 
-<h1>Parrots</h1>
-<p>There's also parrots! Here, we see two Scarlet Macaws and one Blue and Yellow Macaw. On average, Scarlet Macaws have a lifespan of 40-50 years in the wild.</p>
+<h1>It was a Parrot!</h1>
+<p>The blue and yellow macaw just landed to join its friends. <br>
+This type of parrot's wingspan is about 3-4 feet.</p>
+
 <img src="parrots.jpeg" alt="3 parrots sitting on the branch of a tree" style="width:600px">
+
 <br><br>
-<a href="hiking.html">Continue exploring</a>
+<a href="hiking.html">Back to hiking</a>
 
 </body>
 </html>
