--- a/rainforest.html
+++ b/rainforest.html
@@ -2,12 +2,28 @@
 <html>
 <head>
 <title>The Rainforest</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p, a {
+  font-family: verdana;
+}
+</style>
 </head>
 <body>
 
-<h1>The Rainforest</h1>
-<p>You're entering the rainforest. Take a look at <a href="monkey.html">what's in the trees</a></p>
+<h1>Into the Rainforest!</h1>
+
+<p>You're entering the rainforest. <br>
+You hear some movement above you. <a href="monkey.html">What's in the trees?</a><br>
+Or continue exploring by clicking on the path below.
+</p>
+
+<a href="hiking.html">
 <img src="rainforest.jpeg" alt="Rainforest scenery: a dirt path surrounded by tall trees and plants" style="width:600px">
+</a>
+
 <br><br>
 <a href="2-way-path.html">Go back</a>
 
