--- a/snorkeling.html
+++ b/snorkeling.html
@@ -2,13 +2,28 @@
 <html>
 <head>
 <title>Snorkeling</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p, a {
+  font-family: verdana;
+}
+</style>
 </head>
 <body>
 
-<h1>Snorkeling</h1>
-<p>What beautiful tropical fish and colorful coral! Be careful not to stand on coral reef, continuous damage to the coral can lead to it dying.</p>
-<img src="fish.jpeg" alt="Tropical fish and colorful coral" style="width:600px">
-<br><br>
-<a href="dolphins.html">Look above the water!</a>
+<h1>Tropical Fish and Colorful Coral</h1>
+
+<p>The fish and coral are so vibrant! <br>
+Protect the coral reef by making sure not to stand on it.</p>
+
+<img src="fish.jpeg" alt="Tropical fish and colorful coral" style="height:400px">
+<img src="fish.gif" alt="A gif of bannerfish swimming" style="height:400px">
+
+<p>Something is going on above the water.
+<a href="dolphins.html">Look!</a>
+</p>
+
 </body>
 </html>
