--- a/sunset.html
+++ b/sunset.html
@@ -2,11 +2,19 @@
 <html>
 <head>
 <title>The Sunset</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p, a {
+  font-family: verdana;
+}
+</style>
 </head>
 <body>
 
-<h1>The Sunset</h1>
-<p>What a relaxing way to conclude your nature adventure with this view of the sunset.</p>
+<h1>A Relaxing View</h1>
+<p>What a beautiful and relaxing way to conclude your nature adventure by watching the sunset.</p>
 <img src="sunset.gif" alt="a gif of the sunset at the beach" style="width:600px">
 <br><br>
 <a href="index.html">Restart Adventure</a>
