--- a/to-the-beach.html
+++ b/to-the-beach.html
@@ -2,14 +2,26 @@
 <html>
 <head>
 <title>To the Beach</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p, a {
+  font-family: verdana;
+}
+</style>
 </head>
 <body>
 
 <h1>To the Beach!</h1>
-<p>It looks like you're headed towards the beach. Click the picture to explore what's there.</p>
+
+<p>It looks like you're headed towards the beach. <br>
+Click the picture to explore what's there.</p>
+
 <a href="turtle.html">
    <img src="to-the-beach.jpeg" alt="A path leading to the beach" style="width:600px">
 </a>
+
 <br><br>
 <a href="2-way-path.html">Go back</a>
 
