--- a/waterfall.html
+++ b/waterfall.html
@@ -2,12 +2,23 @@
 <html>
 <head>
 <title>Waterfall</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p, a {
+  font-family: verdana;
+}
+</style>
 </head>
 <body>
 
 <h1>A Wonderful View</h1>
-<p>Wow! What a lovely view to conclude your nature adventure!</p>
+
+<p>Wow! What a lovely view of the rainforest waterfall to conclude your nature adventure!</p>
+
 <img src="waterfall.gif" alt="a gif of a waterfall and the rainforest surrounding it" style="width:600px">
+
 <br><br>
 <a href="index.html">Restart Adventure</a>
 
