--- a/monkey.html
+++ b/monkey.html
@@ -2,15 +2,26 @@
 <html>
 <head>
 <title>Monkey</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p, a {
+  font-family: verdana;
+}
+</style>
 </head>
 <body>
 
 <h1>A Monkey</h1>
-<p>There's a monkey watching you from the trees above! This is a howler monkey, called this because their loud howling calls can be heard up to three miles away.</p>
+
+<p>There's a monkey watching you from the trees above! <br>
+This is a howler monkey, called this because their loud howling calls can be heard up to three miles away.</p>
+
 <img src="monkey.jpeg" alt="a money laying on a tree branch, looking towards the viewer" style="width:600px">
-</a>
+
 <br><br>
-<a href="parrots.html">What else is there?</a>
+<a href="rainforest.html">Back to the path</a>
 
 </body>
 </html>
