--- a/turtle.html
+++ b/turtle.html
@@ -2,13 +2,27 @@
 <html>
 <head>
 <title>At the Beach</title>
+<style>
+h1 {
+  font-family: baskerville;
+}
+p, a {
+  font-family: verdana;
+}
+</style>
 </head>
 <body>
 
 <h1>A Sea Turtle</h1>
-<p>There's a sea turtle resting on the beach! Be careful not to disturb it. Sea turtles are protected by the Endagered Species Act.</p>
+
+<p>There's a sea turtle resting on the beach! <br>
+Be careful not to disturb it. Sea turtles are protected by the Endangered Species Act.</p>
+
 <img src="turtle.jpeg" alt="Many turtles on a beach" style="width:600px">
-<br><br>
+
+<p>Let's see what's in the water. 
 <a href="snorkeling.html">Go snorkeling!</a>
+</p>
+
 </body>
 </html>
