--- a/turtle.html
+++ b/turtle.html
@@ -16,13 +16,14 @@ p, a {
 <h1>A Sea Turtle</h1>
 
 <p>There's a sea turtle resting on the beach! <br>
-Be careful not to disturb it. Sea turtles are protected by the Endangered Species Act.</p>
-
-<img src="turtle.jpeg" alt="Many turtles on a beach" style="width:600px">
-
-<p>Let's see what's in the water. 
-<a href="snorkeling.html">Go snorkeling!</a>
+Be careful not to disturb it. Sea turtles are protected by the Endangered Species Act. <br>
+Let's see what's in the water. Click on the ocean behind the turtle to go snorkeling!
 </p>
+
+<img src="turtle.jpeg" alt="Many turtles on a beach" usemap="#workmap" style="width:600px">
+<map name="workmap">
+  <area shape="rect" coords="0, 0, 600, 133" alt="The ocean" href="snorkeling.html">
+</map>
 
 </body>
 </html>
