--- a/2-way-path.html
+++ b/2-way-path.html
@@ -26,7 +26,7 @@ Click on either the left path or the right path to head in that direction.</p>
 <img src="2-way-path.jpeg" alt="A fork in the path" usemap="#workmap" style="width:600px">
 <map name="workmap">
    <area shape="rect" coords="0, 0, 300, 500" alt="The ocean" href="rainforest.html">
-   <area shape="rect" coords="300, 0, 600, 500" alt="The ocean" href="rainforest.html">
+   <area shape="rect" coords="300, 0, 600, 500" alt="The ocean" href="to-the-beach.html">
 </map>
 
 </body>
