--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,24 +2,18 @@
 <html>
 <head>
 <title>Olivia Joy Cacdac</title>
-<style>
-h1 {
-  font-family: baskerville;
-}
-p, a {
-  font-family: verdana;
-}
-</style>
 </head>
 <body>
 
-<h1>Begin Your Nature Adventure</h1>
+<h1>Olivia Joy's Portfolio</h1>
 
-<p>You have started at the beginning of the path. Click on the path to continue.</p>
+<p>Click the links to see each project</p>
 
-<a href="2-way-path.html">
-   <img src="start-path.jpeg" alt="A straight path between trees" style="width:600px">
-</a>
+<a href="glitch-art.html">Glitch Art</a><br>
+<a href="meme-mashup.html">Meme Mashup</a><br>
+<a href="minecraft-sculpture.html">Minecraft Sculpture</a><br>
+<a href="3d-print.html">3D Print</a><br>
+<a href="net-art.html">Net.art</a>
 
 </body>
 </html>
