--- a/portfolio/3d-print.html
+++ b/portfolio/3d-print.html
@@ -8,10 +8,21 @@
 <h1>3D Print</h1>
 
 <p>
-The objective of this project was to export the Minecraft Sculpture as an STL file and prepare it for a 3D Print. A small draft print was done first to understand how the sculpture should be rebuilt, if needed. Then a larger print was done to show the details of the sculpture. I finished my final piece by removing the scaffolding, filing the rough edges, and painting it. The final piece with color represents Ironman's helmet.
+The objective of this project was to export the Minecraft Sculpture as an STL file and prepare it for a 3D Print using the printer's software by adding scaffolding where needed. A small print was first done as a draft to understand how the sculpture should be rebuilt, if it's needed. Then a final print was done much larger to show the details of the sculpture.
 </p>
 
+<p>
+My final print of the Iron man helmet took almost 7 hours and came out to be about 3 inches tall. To finish the piece, I removed the scaffolding, filed down the rough edges, and painted it.
+</p>
+
+<img src="3d-ironman-helmet.png" alt="3D printed sculpture of Ironman's helmet" style="height:500px">
+<img src="3d-ironman-helmet-rightside.png" alt="3D printed sculpture of Ironman's helmet, right side angle" style="height:500px">
+<img src="3d-ironman-helmet-leftside.png" alt="3D printed sculpture of Ironman's helmet, left side angle" style="height:500px">
+<img src="3d-ironman-helmet-draft-final.png" alt="3D final print of Ironman's helmet beside the small draft print" style="height:500px">
+
+<p>
 <a href="index.html">Home page</a>
+</p>
 
 </body>
 </html>
