--- a/portfolio/glitch-art.html
+++ b/portfolio/glitch-art.html
@@ -8,18 +8,25 @@
 <h1>Glitch Art</h1>
 
 <p>
-Glitch Art is taking a familiar piece of technology and doing something unfamiliar with it. The images below were made from .jpg image files edited with TextEdit or Audacity. 
+Glitch Art is doing something unfamiliar with a piece of technology that you are familiar with. For example, I made the glitches below by taking the familiar .jpg image file and made changes to it using Audacity, which is an audio editor software, and TextEdit.
 </p>
 
 <p>
 This series of images are related through the theme of fast food. I choose images from In-N-Out, Carl's Jr, and McDonalds because these are some of my favorite fast food places. Fast food advertisements always show their burgers and other food as perfectly put together, and they make it look as appealing as possible.
-</p>
-
-<p>
 These glitches represent how the food in real life never actually looks like it does in the commercials. The glitch of fast food also represents the way that some people see fast food as unhealthy, but I left the images with a pleasing aesthetic because I personally still enjoy eating fast food anyway.
 </p>
 
+<img src="carlsjr-glitch-final.png" alt="Carl's Jr food as a glitched image" style="height:400px">
+<img src="in-n-out-glitch-final.png" alt="In-N-Out food as a glitched image" style="height:400px">
+<img src="mcdonalds-glitch-final.png" alt="McDonald's food as a glitched image" style="height:400px">
+<img src="in-n-out-glitch.png" alt="In-N-Out exterior as a glitched image" style="height:400px">
+<img src="mcdonalds-glitch.png" alt="McDonalds exterior as a glitched image" style="height:400px">
+<img src="mcdonalds-bass-2-treble15-vol12.png" alt="McDonalds food as a glitched image, made with Audacity" style="height:400px">
+<img src="mcdonalds-reverb.png" alt="McDonalds food as a glitched image, made with reverb effect in Audacity" style="height:400px">
+
+<p>
 <a href="index.html">Home page</a>
+</p>
 
 </body>
 </html>
