--- a/portfolio/meme-mashup.html
+++ b/portfolio/meme-mashup.html
@@ -8,18 +8,30 @@
 <h1>Meme Mashup</h1>
 
 <p>
-A meme mashup creates something new and meaningful from the source memes. Each source meme has is own meaning, and when combined in the mashup, it creates something with a new meaning.
+A meme mashup creates something new and meaningful from the source memes. Each individual meme used in the mashup has is own meaning and when combined, the mashup as a whole piece creates a new meaning. I used Adobe Photoshop to create the mashups.
 </p>
 
 <p>
-The base of this mashup is the disaster girl meme, and she is now the evil Kermit. The Elmo on her shoulder is supporting her in the chaos of the fire while the regular Kermit watches.
+<img src="meme-mashup.png" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes" style="width:700px">
+<br>
+The base of this mashup is the disaster girl meme, and she is now the evil Kermit. The Elmo on her shoulder is supporting her in the chaos of the fire while the regular Kermit watches the woman and Spongebob who just escaped the building.
 </p>
 
 <p>
-A version of the above without the evil Kermit meme.
+<img src="meme-mashup1-2.png" alt="Mashup image of the disaster girl, woman squinting, tired spongebob, and Elmo rise memes" style="width:700px">
+<br>
+A version of the above without the evil Kermit meme. Both Spongebob and the woman escape the fire. The woman wonders if the child is responsible for the fire. Rising Elmo in his element.
 </p>
 
+<p>
+<img src="meme-mashup3.png" alt="Mashup image of the woman squinting, suprised Pikachu, and the cat from the woman yelling at a cat meme" style="width:700px">
+<br>
+The cat and the suprised Pikachu look similar. The woman is trying to tell the difference between them.
+</p>
+
+<p>
 <a href="index.html">Home page</a>
+</p>
 
 </body>
 </html>
