--- a/portfolio/minecraft-sculpture.html
+++ b/portfolio/minecraft-sculpture.html
@@ -8,14 +8,35 @@
 <h1>Minecraft Sculpture</h1>
 
 <p>
-The significance of this project is to design in a virtual environment with the idea of it later being 3D printed. The sculpture was made to be an object of cultural significance.
+The objective of this project was to use a virtual environment to design a sculpture representing an object of cultural significance. The sculpture was also created with the idea in mind that it would later be 3D printed.
 </p>
+
+<h2>Iron Man Helmet</h2>
 
 <p>
-I made a sculpture of the Iron Man helmet because it represents Marvel, which I am a big fan of. It is culturally significant because many people around the world have grown up watching the Marvel movies and/or reading the comic books. Marvel has been a big influence in pop culture, and it continues to be as they release new movies and shows.
+I created a sculpture of the Iron Man helmet because it represents Marvel, which I am a big fan of. It is culturally significant because many people around the world have grown up watching the Marvel movies and/or reading the comic books. Marvel has been a big influence in pop culture, and it continues to be as they release new movies and shows.
 </p>
 
+<img src="ironman-helmet-mc.png" alt="Minecraft sculpture of Ironman's helmet" style="height:500px">
+<img src="ironman-right-angle.png" alt="Minecraft sculpture of Ironman's helmet, right side angle" style="height:500px">
+<img src="ironman-left-angle.png" alt="Minecraft sculpture of Ironman's helmet, left side angle" style="height:500px">
+<img src="ironman-above-angle.png" alt="Minecraft sculpture of Ironman's helmet, above angle" style="height:500px">
+
+<h2>Baby Groot</h2>
+
+<p>
+I built this sculpture of Baby Groot from Guardians of the Galaxy Vol. 2 because it was another way to represent Marvel. Moveover, the cultural significance of Baby Groot is about how his adorablness from the movie captured many people's attention.
+</p>
+
+<img src="baby-groot-sculpture.png" alt="Minecraft sculpture of Baby Groot" style="height:500px">
+<img src="baby-groot-right-angle.png" alt="Minecraft sculpture of Baby Groot, right side angle" style="height:500px">
+<img src="baby-groot-left-angle.png" alt="Minecraft sculpture of Baby Groot, left side angle" style="height:500px">
+<img src="baby-groot-above-angle.png" alt="Minecraft sculpture of Baby Groot, above angle" style="height:500px">
+
+
+<p>
 <a href="index.html">Home page</a>
+</p>
 
 </body>
 </html>
