--- a/portfolio/net-art.html
+++ b/portfolio/net-art.html
@@ -8,12 +8,26 @@
 <h1>Net.art</h1>
 
 <p>
-The objective of this project was to tell a story or experience in a poetic, modern, hypertext way. My website is a fun little experience with nature. It shows that different paths can led you to different parts of nature, where there will be various things to see. The idea is that you can choose to look around and explore your surroundings wherever you are in nature to see what it has to offer.
+The objective of this project was to create a series of pages with links, text, and images to tell a story or experience in a poetic, modern, hypertext way.
 </p>
 
-<a href="https://oliviajoyyy.github.io/">See my Net.art here</a><br><br>
+<p>
+My website is a fun little experience with nature. It shows that different paths can led you to different parts of nature, where there will be various things to see. The idea is that you can choose to look around and explore your surroundings wherever you are in nature to see what it has to offer.
+</p>
 
+<p>
+<a href="https://oliviajoyyy.github.io/">See my Net.art here</a>
+</p>
+
+<p>Preview screenshots of the first two pages on my Net art site:</p>
+
+<img src="begin-your-adventure.png" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure" style="height:500px">
+
+<img src="2-way-path.png" alt="The second page of Olivia's Net art website. The page title is Choose Your Path" style="height:500px">
+
+<p>
 <a href="index.html">Home page</a>
+</p>
 
 </body>
 </html>
