--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,15 +5,50 @@
 </head>
 <body>
 
-<h1>Olivia Joy's Portfolio</h1>
+<h1>Art Portfolio | Olivia Joy Cacdac</h1>
 
-<p>Click the links to see each project</p>
+<h2>Art 74 Projects</h2>
+<p>
+See my recent projects from my Digital Media Art class. Click each image to see more from that project.
+</p>
 
-<a href="glitch-art.html">Glitch Art</a><br>
-<a href="meme-mashup.html">Meme Mashup</a><br>
-<a href="minecraft-sculpture.html">Minecraft Sculpture</a><br>
-<a href="3d-print.html">3D Print</a><br>
+<p>
+<a href="glitch-art.html">Glitch Art</a>
+<a href="meme-mashup.html">Meme Mashup</a>
+<a href="minecraft-sculpture.html">Minecraft Sculpture</a>
+<a href="3d-print.html">3D Print</a>
 <a href="net-art.html">Net.art</a>
+</p>
+
+<br>
+
+<a href="glitch-art.html">
+  <img src="in-n-out-glitch.png" alt="In-N-Out exterior glitched image" style="width:400px">
+</a>
+
+<a href="meme-mashup.html">
+   <img src="meme-mashup.png" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes" style="width:400px">
+</a>
+
+<a href="minecraft-sculpture.html">
+   <img src="ironman-left-angle.png" alt="A sculpture made in Minecraft of Ironman's helmet" style="width:400px">
+</a>
+
+<a href="3d-print.html">
+  <img src="3d-ironman-helmet.png" alt="3D printed sculpture of Ironman's helmet" style="width:400px">
+</a>
+
+<a href="net-art.html">
+  <img src="begin-your-adventure.png" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure" style="width:400px">
+</a>
+
+<br>
+
+<h2>About Me</h2>
+<p>
+My name is Olivia Joy Cacdac and I am a Computer Science major at San Jose State University. I am also a beginner New Media Artist. Through my Intro to Digital Media Art class, I've had the opportunity to explore and create New Media Art using various tools, such as Adobe Photoshop and 3D printing softwares.
+</p>
+
 
 </body>
 </html>
