--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,7 +23,7 @@ See my recent projects from my Digital Media Art class. Click each image to see 
 <br>
 
 <a href="glitch-art.html">
-  <img src="in-n-out-glitch.png" alt="In-N-Out exterior glitched image" style="width:400px">
+  <img src="in-n-out-glitch-exterior.png" alt="In-N-Out exterior glitched image" style="width:400px">
 </a>
 
 <a href="meme-mashup.html">
