--- a/portfolio/glitch-art.html
+++ b/portfolio/glitch-art.html
@@ -16,11 +16,11 @@ This series of images are related through the theme of fast food. I choose image
 These glitches represent how the food in real life never actually looks like it does in the commercials. The glitch of fast food also represents the way that some people see fast food as unhealthy, but I left the images with a pleasing aesthetic because I personally still enjoy eating fast food anyway.
 </p>
 
-<img src="carlsjr-glitch-final.png" alt="Carl's Jr food as a glitched image" style="height:400px">
-<img src="in-n-out-glitch-final.png" alt="In-N-Out food as a glitched image" style="height:400px">
-<img src="mcdonalds-glitch-final.png" alt="McDonald's food as a glitched image" style="height:400px">
-<img src="in-n-out-glitch.png" alt="In-N-Out exterior as a glitched image" style="height:400px">
-<img src="mcdonalds-glitch.png" alt="McDonalds exterior as a glitched image" style="height:400px">
+<img src="carlsjr-glitch-food.png" alt="Carl's Jr food as a glitched image" style="height:400px">
+<img src="in-n-out-glitch-food.png" alt="In-N-Out food as a glitched image" style="height:400px">
+<img src="mcdonalds-glitch-food.png" alt="McDonald's food as a glitched image" style="height:400px">
+<img src="in-n-out-glitch-exterior.png" alt="In-N-Out exterior as a glitched image" style="height:400px">
+<img src="mcdonalds-glitch-exterior.png" alt="McDonalds exterior as a glitched image" style="height:400px">
 <img src="mcdonalds-bass-2-treble15-vol12.png" alt="McDonalds food as a glitched image, made with Audacity" style="height:400px">
 <img src="mcdonalds-reverb.png" alt="McDonalds food as a glitched image, made with reverb effect in Audacity" style="height:400px">
 
