--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Olivia Joy Cacdac</title>
+<title>Portfolio | Olivia Joy Cacdac</title>
 </head>
 <body>
 
-<h1>Art Portfolio | Olivia Joy Cacdac</h1>
+<h1>Portfolio | Olivia Joy Cacdac</h1>
 
 <h2>Art 74 Projects</h2>
 <p>
@@ -23,23 +23,23 @@ See my recent projects from my Digital Media Art class. Click each image to see 
 <br>
 
 <a href="glitch-art.html">
-  <img src="in-n-out-glitch-exterior.png" alt="In-N-Out exterior glitched image" style="width:400px">
+  <img src="in-n-out-glitch-exterior.png" alt="In-N-Out exterior glitched image" style="height:400px">
 </a>
 
 <a href="meme-mashup.html">
-   <img src="meme-mashup.png" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes" style="width:400px">
+   <img src="meme-mashup.png" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes" style="height:400px">
 </a>
 
 <a href="minecraft-sculpture.html">
-   <img src="ironman-left-angle.png" alt="A sculpture made in Minecraft of Ironman's helmet" style="width:400px">
+   <img src="ironman-left-angle.png" alt="A sculpture made in Minecraft of Ironman's helmet" style="height:400px">
 </a>
 
 <a href="3d-print.html">
-  <img src="3d-ironman-helmet.png" alt="3D printed sculpture of Ironman's helmet" style="width:400px">
+  <img src="3d-ironman-helmet.png" alt="3D printed sculpture of Ironman's helmet" style="height:400px">
 </a>
 
 <a href="net-art.html">
-  <img src="begin-your-adventure.png" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure" style="width:400px">
+  <img src="begin-your-adventure.png" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure" style="height:400px">
 </a>
 
 <br>
