--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
 
 <h2>Art 74 Projects</h2>
 <p>
-See my recent projects from my Digital Media Art class. Click each image to see more from that project.
+See my recent projects from my Digital Media Art class. Use the links below or click each image to see more from that project.
 </p>
 
 <p>
