--- a/index.html
+++ b/index.html
@@ -1,25 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Olivia Joy Cacdac</title>
-<style>
-h1 {
-  font-family: baskerville;
-}
-p, a {
-  font-family: verdana;
-}
-</style>
+<title>Portfolio | Olivia Joy Cacdac</title>
 </head>
 <body>
 
-<h1>Begin Your Nature Adventure</h1>
+<h1>Portfolio | Olivia Joy</h1>
 
-<p>You have started at the beginning of the path. Click on the path to continue.</p>
+<h2>Art 74 Projects</h2>
+<p>
+See my recent projects from my Digital Media Art class. Click each image to see more from that project.
+</p>
 
-<a href="2-way-path.html">
-   <img src="start-path.jpeg" alt="A straight path between trees" style="width:600px">
+<p>
+<a href="glitch-art.html">Glitch Art</a>
+<a href="meme-mashup.html">Meme Mashup</a>
+<a href="minecraft-sculpture.html">Minecraft Sculpture</a>
+<a href="3d-print.html">3D Print</a>
+<a href="net-art.html">Net.art</a>
+</p>
+
+<br>
+
+<a href="glitch-art.html">
+  <img src="in-n-out-glitch-exterior.png" alt="In-N-Out exterior glitched image" style="height:400px">
 </a>
+
+<a href="meme-mashup.html">
+   <img src="meme-mashup.png" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes" style="height:400px">
+</a>
+
+<a href="minecraft-sculpture.html">
+   <img src="ironman-left-angle.png" alt="A sculpture made in Minecraft of Ironman's helmet" style="height:400px">
+</a>
+
+<a href="3d-print.html">
+  <img src="3d-ironman-helmet.png" alt="3D printed sculpture of Ironman's helmet" style="height:400px">
+</a>
+
+<a href="net-art.html">
+  <img src="begin-your-adventure.png" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure" style="height:400px">
+</a>
+
+<br>
+
+<h2>About Me</h2>
+<p>
+My name is Olivia Joy Cacdac and I am a Computer Science major at San Jose State University. I am also a beginner New Media Artist. Through my Intro to Digital Media Art class, I've had the opportunity to explore and create New Media Art using various tools, such as Adobe Photoshop and 3D printing softwares.
+</p>
+
 
 </body>
 </html>
