--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Portfolio | Olivia Joy Cacdac</title>
+  <title>Portfolio | Olivia Joy Cacdac</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
+<div class="container-fluid">
 
 <h1>Portfolio | Olivia Joy</h1>
 
@@ -49,6 +55,6 @@ See my recent projects from my Digital Media Art class. Click each image to see 
 My name is Olivia Joy Cacdac and I am a Computer Science major at San Jose State University. I am also a beginner New Media Artist. Through my Intro to Digital Media Art class, I've had the opportunity to explore and create New Media Art using various tools, such as Adobe Photoshop and 3D printing softwares.
 </p>
 
-
+</div>
 </body>
 </html>
