--- a/meme-mashup.html
+++ b/meme-mashup.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Meme Mashup - Olivia Joy</title>
+  <title>Meme Mashup - Olivia Joy</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
+<div class="container-fluid">
 
 <h1>Meme Mashup</h1>
 
@@ -12,7 +18,7 @@ A meme mashup creates something new and meaningful from the source memes. Each i
 </p>
 
 <p>
-<img src="meme-mashup.png" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes" style="width:700px">
+<img src="meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
 <br>
 The base of this mashup is the disaster girl meme, and she is now the evil Kermit. The Elmo on her shoulder is supporting her in the chaos of the fire while the regular Kermit watches the woman and Spongebob who just escaped the building.
 </p>
@@ -33,5 +39,6 @@ The cat and the suprised Pikachu look similar. The woman is trying to tell the d
 <a href="index.html">Home page</a>
 </p>
 
+</div>
 </body>
 </html>
