--- a/index.html
+++ b/index.html
@@ -28,25 +28,51 @@ See my recent projects from my Digital Media Art class. Click each image to see 
 
 <br>
 
-<a href="glitch-art.html">
-  <img src="in-n-out-glitch-exterior.png" alt="In-N-Out exterior glitched image" style="height:400px">
-</a>
+<div class="row">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-5">
+	<a href="glitch-art.html">
+  	  <img src="in-n-out-glitch-exterior.png" class="img-fluid mx-auto d-block" alt="In-N-Out exterior glitched image">
+	</a>
+  </div>
+  <div class="col-sm-5">
+	<a href="meme-mashup.html">
+   	  <img src="meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
+	</a>
+  </div>
+  <div class="col-sm-1"></div>
+</div>
 
-<a href="meme-mashup.html">
-   <img src="meme-mashup.png" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes" style="height:400px">
-</a>
+<br>
 
-<a href="minecraft-sculpture.html">
-   <img src="ironman-left-angle.png" alt="A sculpture made in Minecraft of Ironman's helmet" style="height:400px">
-</a>
+<div class="row">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-5">
+	<a href="minecraft-sculpture.html">
+   	  <img src="ironman-left-angle.png" class="img-fluid mx-auto d-block" alt="A sculpture made in Minecraft of Ironman's helmet">
+	</a>
+  </div>
+  <div class="col-sm-5">
+	<a href="3d-print.html">
+	  <img src="3d-ironman-helmet.png" class="img-fluid mx-auto d-block" alt="3D printed sculpture of Ironman's helmet">
+	</a>
+  </div>
+  <div class="col-sm-1"></div>
+</div>
 
-<a href="3d-print.html">
-  <img src="3d-ironman-helmet.png" alt="3D printed sculpture of Ironman's helmet" style="height:400px">
-</a>
+<br>
 
-<a href="net-art.html">
-  <img src="begin-your-adventure.png" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure" style="height:400px">
-</a>
+<div class="row">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-5">
+	<a href="net-art.html">
+	  <img src="begin-your-adventure.png" class="img-fluid mx-auto d-block" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure">
+	</a>
+  </div>
+  <div class="col-sm-5"></div>
+  <div class="col-sm-1"></div>
+</div>
+
 
 <br>
 
