--- a/meme-mashup.html
+++ b/meme-mashup.html
@@ -17,23 +17,35 @@
 A meme mashup creates something new and meaningful from the source memes. Each individual meme used in the mashup has is own meaning and when combined, the mashup as a whole piece creates a new meaning. I used Adobe Photoshop to create the mashups.
 </p>
 
-<p>
-<img src="meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
-<br>
-The base of this mashup is the disaster girl meme, and she is now the evil Kermit. The Elmo on her shoulder is supporting her in the chaos of the fire while the regular Kermit watches the woman and Spongebob who just escaped the building.
-</p>
+<div class="row">
+  <div class="col-sm-8">
+	<img src="meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
+  </div>
+  <div class="col-sm-4">The base of this mashup is the disaster girl meme, and she is now the evil Kermit. The Elmo on her shoulder is supporting her in the chaos of the fire while the regular Kermit watches the woman and Spongebob who just escaped the building.
+  </div>
+</div>
 
-<p>
-<img src="meme-mashup1-2.png" alt="Mashup image of the disaster girl, woman squinting, tired spongebob, and Elmo rise memes" style="width:700px">
 <br>
-A version of the above without the evil Kermit meme. Both Spongebob and the woman escape the fire. The woman wonders if the child is responsible for the fire. Rising Elmo in his element.
-</p>
 
-<p>
-<img src="meme-mashup3.png" alt="Mashup image of the woman squinting, suprised Pikachu, and the cat from the woman yelling at a cat meme" style="width:700px">
+<div class="row">
+  <div class="col-sm-8">
+	<img src="meme-mashup1-2.png" class="img-fluid mx-auto d-block" alt="Mashup image of the disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
+  </div>
+  <div class="col-sm-4">A version of the above without the evil Kermit meme. Both Spongebob and the woman escape the fire. The woman wonders if the child is responsible for the fire. Rising Elmo in his element.
+  </div>
+</div>
+
 <br>
-The cat and the suprised Pikachu look similar. The woman is trying to tell the difference between them.
-</p>
+
+<div class="row">
+  <div class="col-sm-8">
+	<img src="meme-mashup3.png" class="img-fluid mx-auto d-block" alt="Mashup image of the woman squinting, suprised Pikachu, and the cat from the woman yelling at a cat meme">
+  </div>
+  <div class="col-sm-4">The cat and the suprised Pikachu look similar. The woman is trying to tell the difference between them.
+  </div>
+</div>
+
+<br>
 
 <p>
 <a href="index.html">Home page</a>
