--- a/index.html
+++ b/index.html
@@ -9,26 +9,30 @@
 </head>
 
 <body>
-<div class="container-fluid">
 
-<h1>Portfolio | Olivia Joy</h1>
+<div class="container pt-3 pb-3">
+
+<h1 class="text-center">Portfolio | Olivia Joy</h1>
+
+<div class="container-fluid pb-3">
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+ <ul class="navbar-nav">
+ 	<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+	<li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
+	<li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme Mashup</a></li>
+    	<li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft Sculpture</a></li>
+	<li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
+    	<li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+</ul> 
+</nav>
+</div>
 
 <h2>Art 74 Projects</h2>
 <p>
 See my recent projects from my Digital Media Art class. Click each image to see more from that project.
 </p>
 
-<p>
-<a href="glitch-art.html">Glitch Art</a>
-<a href="meme-mashup.html">Meme Mashup</a>
-<a href="minecraft-sculpture.html">Minecraft Sculpture</a>
-<a href="3d-print.html">3D Print</a>
-<a href="net-art.html">Net.art</a>
-</p>
-
-<br>
-
-<div class="row">
+<div class="row pb-4">
   <div class="col-sm-1"></div>
   <div class="col-sm-5">
 	<a href="glitch-art.html">
@@ -43,9 +47,7 @@ See my recent projects from my Digital Media Art class. Click each image to see 
   <div class="col-sm-1"></div>
 </div>
 
-<br>
-
-<div class="row">
+<div class="row pb-4">
   <div class="col-sm-1"></div>
   <div class="col-sm-5">
 	<a href="minecraft-sculpture.html">
@@ -60,9 +62,7 @@ See my recent projects from my Digital Media Art class. Click each image to see 
   <div class="col-sm-1"></div>
 </div>
 
-<br>
-
-<div class="row">
+<div class="row pb-4">
   <div class="col-sm-1"></div>
   <div class="col-sm-5">
 	<a href="net-art.html">
@@ -72,9 +72,6 @@ See my recent projects from my Digital Media Art class. Click each image to see 
   <div class="col-sm-5"></div>
   <div class="col-sm-1"></div>
 </div>
-
-
-<br>
 
 <h2>About Me</h2>
 <p>
