--- a/meme-mashup.html
+++ b/meme-mashup.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-<div class="container-fluid">
+<div class="container pt-3">
+
+<nav class="navbar navbar-expand-sm bg-light navbar-light mt-3">
+ <ul class="navbar-nav">
+ 	<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+	<li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
+	<li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme Mashup</a></li>
+    	<li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft Sculpture</a></li>
+	<li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
+    	<li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+</ul> 
+</nav>
 
 <h1>Meme Mashup</h1>
 
@@ -17,7 +28,7 @@
 A meme mashup creates something new and meaningful from the source memes. Each individual meme used in the mashup has is own meaning and when combined, the mashup as a whole piece creates a new meaning. I used Adobe Photoshop to create the mashups.
 </p>
 
-<div class="row">
+<div class="row pb-3">
   <div class="col-sm-8">
 	<img src="meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
   </div>
@@ -25,9 +36,7 @@ A meme mashup creates something new and meaningful from the source memes. Each i
   </div>
 </div>
 
-<br>
-
-<div class="row">
+<div class="row pb-3">
   <div class="col-sm-8">
 	<img src="meme-mashup1-2.png" class="img-fluid mx-auto d-block" alt="Mashup image of the disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
   </div>
@@ -35,17 +44,13 @@ A meme mashup creates something new and meaningful from the source memes. Each i
   </div>
 </div>
 
-<br>
-
-<div class="row">
+<div class="row pb-3">
   <div class="col-sm-8">
 	<img src="meme-mashup3.png" class="img-fluid mx-auto d-block" alt="Mashup image of the woman squinting, suprised Pikachu, and the cat from the woman yelling at a cat meme">
   </div>
   <div class="col-sm-4">The cat and the suprised Pikachu look similar. The woman is trying to tell the difference between them.
   </div>
 </div>
-
-<br>
 
 <p>
 <a href="index.html">Home page</a>
