--- a/glitch-art.html
+++ b/glitch-art.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Glitch Art - Olivia Joy</title>
+<title>Glitch Art | Olivia Joy</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-sm text-bg-dark navbar-dark">
+ <div class="container-fluid">
+  <ul class="navbar-nav">
+ 	<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+	<li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
+	<li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme Mashup</a></li>
+    	<li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft Sculpture</a></li>
+	<li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
+    	<li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+  </ul> 
+ </div>
+</nav>
+
+<div class="container-fluid pt-3 pb-3">
 
 <h1>Glitch Art</h1>
 
@@ -24,9 +43,7 @@ These glitches represent how the food in real life never actually looks like it 
 <img src="mcdonalds-bass-2-treble15-vol12.png" alt="McDonalds food as a glitched image, made with Audacity" style="height:400px">
 <img src="mcdonalds-reverb.png" alt="McDonalds food as a glitched image, made with reverb effect in Audacity" style="height:400px">
 
-<p>
-<a href="index.html">Home page</a>
-</p>
+</div>
 
 </body>
 </html>
