--- a/index.html
+++ b/index.html
@@ -6,28 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<div class="container pt-3 pb-3">
+<div class="container-fluid pt-3 pb-3">
 
 <h1 class="text-center">Portfolio | Olivia Joy</h1>
 
-<div class="container-fluid pb-3">
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
- <ul class="navbar-nav">
- 	<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-	<li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
-	<li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme Mashup</a></li>
-    	<li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft Sculpture</a></li>
-	<li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
-    	<li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
-</ul> 
-</nav>
 </div>
 
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+  <ul class="navbar-nav">
+ 	<li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+	<li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
+	<li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
+    	<li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
+	<li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
+    	<li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+  </ul> 
+</nav>
+
+<div class="container-fluid pt-3 bg-74">
+
 <h2>Art 74 Projects</h2>
+
 <p>
 See my recent projects from my Digital Media Art class. Click each image to see more from that project.
 </p>
@@ -73,11 +77,16 @@ See my recent projects from my Digital Media Art class. Click each image to see 
   <div class="col-sm-1"></div>
 </div>
 
+</div>
+
+<div class="container-fluid pt-3 pb-3 text-bg-light">
+
 <h2>About Me</h2>
 <p>
 My name is Olivia Joy Cacdac and I am a Computer Science major at San Jose State University. I am also a beginner New Media Artist. Through my Intro to Digital Media Art class, I've had the opportunity to explore and create New Media Art using various tools, such as Adobe Photoshop and 3D printing softwares.
 </p>
 
 </div>
+
 </body>
 </html>
