--- a/meme-mashup.html
+++ b/meme-mashup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Meme Mashup - Olivia Joy</title>
+  <title>Meme Mashup | Olivia Joy</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -9,18 +9,21 @@
 </head>
 
 <body>
-<div class="container pt-3">
 
-<nav class="navbar navbar-expand-sm bg-light navbar-light mt-3">
- <ul class="navbar-nav">
+<nav class="navbar navbar-expand-sm text-bg-dark navbar-dark">
+ <div class="container-fluid">
+  <ul class="navbar-nav">
  	<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 	<li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
 	<li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme Mashup</a></li>
     	<li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft Sculpture</a></li>
 	<li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
     	<li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
-</ul> 
+  </ul> 
+ </div>
 </nav>
+
+<div class="container-fluid pt-3 pb-3">
 
 <h1>Meme Mashup</h1>
 
@@ -51,10 +54,6 @@ A meme mashup creates something new and meaningful from the source memes. Each i
   <div class="col-sm-4">The cat and the suprised Pikachu look similar. The woman is trying to tell the difference between them.
   </div>
 </div>
-
-<p>
-<a href="index.html">Home page</a>
-</p>
 
 </div>
 </body>
