Move images to folders

--- a/3d-print.html
+++ b/3d-print.html
@@ -15,10 +15,10 @@ The objective of this project was to export the Minecraft Sculpture as an STL fi
 My final print of the Iron man helmet took almost 7 hours and came out to be about 3 inches tall. To finish the piece, I removed the scaffolding, filed down the rough edges, and painted it.
 </p>
 
-<img src="3d-ironman-helmet.png" alt="3D printed sculpture of Ironman's helmet" style="height:500px">
-<img src="3d-ironman-helmet-rightside.png" alt="3D printed sculpture of Ironman's helmet, right side angle" style="height:500px">
-<img src="3d-ironman-helmet-leftside.png" alt="3D printed sculpture of Ironman's helmet, left side angle" style="height:500px">
-<img src="3d-ironman-helmet-draft-final.png" alt="3D final print of Ironman's helmet beside the small draft print" style="height:500px">
+<img src="images/3d/3d-ironman-helmet.png" alt="3D printed sculpture of Ironman's helmet" style="height:500px">
+<img src="images/3d/3d-ironman-helmet-rightside.png" alt="3D printed sculpture of Ironman's helmet, right side angle" style="height:500px">
+<img src="images/3d/3d-ironman-helmet-leftside.png" alt="3D printed sculpture of Ironman's helmet, left side angle" style="height:500px">
+<img src="images/3d/3d-ironman-helmet-draft-final.png" alt="3D final print of Ironman's helmet beside the small draft print" style="height:500px">
 
 <p>
 <a href="index.html">Home page</a>
