--- a/meme-mashup.html
+++ b/meme-mashup.html
@@ -33,7 +33,7 @@ A meme mashup creates something new and meaningful from the source memes. Each i
 
 <div class="row pb-3">
   <div class="col-sm-8">
-	<img src="meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
+	<img src="images/meme/meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
   </div>
   <div class="col-sm-4">The base of this mashup is the disaster girl meme, and she is now the evil Kermit. The Elmo on her shoulder is supporting her in the chaos of the fire while the regular Kermit watches the woman and Spongebob who just escaped the building.
   </div>
@@ -41,7 +41,7 @@ A meme mashup creates something new and meaningful from the source memes. Each i
 
 <div class="row pb-3">
   <div class="col-sm-8">
-	<img src="meme-mashup1-2.png" class="img-fluid mx-auto d-block" alt="Mashup image of the disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
+	<img src="images/meme/meme-mashup1-2.png" class="img-fluid mx-auto d-block" alt="Mashup image of the disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
   </div>
   <div class="col-sm-4">A version of the above without the evil Kermit meme. Both Spongebob and the woman escape the fire. The woman wonders if the child is responsible for the fire. Rising Elmo in his element.
   </div>
@@ -49,7 +49,7 @@ A meme mashup creates something new and meaningful from the source memes. Each i
 
 <div class="row pb-3">
   <div class="col-sm-8">
-	<img src="meme-mashup3.png" class="img-fluid mx-auto d-block" alt="Mashup image of the woman squinting, suprised Pikachu, and the cat from the woman yelling at a cat meme">
+	<img src="images/meme/meme-mashup3.png" class="img-fluid mx-auto d-block" alt="Mashup image of the woman squinting, suprised Pikachu, and the cat from the woman yelling at a cat meme">
   </div>
   <div class="col-sm-4">The cat and the suprised Pikachu look similar. The woman is trying to tell the difference between them.
   </div>
