--- a/minecraft-sculpture.html
+++ b/minecraft-sculpture.html
@@ -17,10 +17,10 @@ The objective of this project was to use a virtual environment to design a sculp
 I created a sculpture of the Iron Man helmet because it represents Marvel, which I am a big fan of. It is culturally significant because many people around the world have grown up watching the Marvel movies and/or reading the comic books. Marvel has been a big influence in pop culture, and it continues to be as they release new movies and shows.
 </p>
 
-<img src="ironman-helmet-mc.png" alt="Minecraft sculpture of Ironman's helmet" style="height:500px">
-<img src="ironman-right-angle.png" alt="Minecraft sculpture of Ironman's helmet, right side angle" style="height:500px">
-<img src="ironman-left-angle.png" alt="Minecraft sculpture of Ironman's helmet, left side angle" style="height:500px">
-<img src="ironman-above-angle.png" alt="Minecraft sculpture of Ironman's helmet, above angle" style="height:500px">
+<img src="images/minecraft/ironman-helmet-mc.png" alt="Minecraft sculpture of Ironman's helmet" style="height:500px">
+<img src="images/minecraft/ironman-right-angle.png" alt="Minecraft sculpture of Ironman's helmet, right side angle" style="height:500px">
+<img src="images/minecraft/ironman-left-angle.png" alt="Minecraft sculpture of Ironman's helmet, left side angle" style="height:500px">
+<img src="images/minecraft/ironman-above-angle.png" alt="Minecraft sculpture of Ironman's helmet, above angle" style="height:500px">
 
 <h2>Baby Groot</h2>
 
@@ -28,10 +28,10 @@ I created a sculpture of the Iron Man helmet because it represents Marvel, which
 I built this sculpture of Baby Groot from Guardians of the Galaxy Vol. 2 because it was another way to represent Marvel. Moveover, the cultural significance of Baby Groot is about how his adorablness from the movie captured many people's attention.
 </p>
 
-<img src="baby-groot-sculpture.png" alt="Minecraft sculpture of Baby Groot" style="height:500px">
-<img src="baby-groot-right-angle.png" alt="Minecraft sculpture of Baby Groot, right side angle" style="height:500px">
-<img src="baby-groot-left-angle.png" alt="Minecraft sculpture of Baby Groot, left side angle" style="height:500px">
-<img src="baby-groot-above-angle.png" alt="Minecraft sculpture of Baby Groot, above angle" style="height:500px">
+<img src="images/minecraft/baby-groot-sculpture.png" alt="Minecraft sculpture of Baby Groot" style="height:500px">
+<img src="images/minecraft/baby-groot-right-angle.png" alt="Minecraft sculpture of Baby Groot, right side angle" style="height:500px">
+<img src="images/minecraft/baby-groot-left-angle.png" alt="Minecraft sculpture of Baby Groot, left side angle" style="height:500px">
+<img src="images/minecraft/baby-groot-above-angle.png" alt="Minecraft sculpture of Baby Groot, above angle" style="height:500px">
 
 
 <p>
