--- a/net-art.html
+++ b/net-art.html
@@ -21,9 +21,9 @@ My website is a fun little experience with nature. It shows that different paths
 
 <p>Preview screenshots of the first two pages on my Net art site:</p>
 
-<img src="begin-your-adventure.png" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure" style="height:500px">
+<img src="images/net-art/begin-your-adventure.png" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure" style="height:500px">
 
-<img src="2-way-path.png" alt="The second page of Olivia's Net art website. The page title is Choose Your Path" style="height:500px">
+<img src="images/net-art/2-way-path.png" alt="The second page of Olivia's Net art website. The page title is Choose Your Path" style="height:500px">
 
 <p>
 <a href="index.html">Home page</a>
