--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@ See my recent projects from my Digital Media Art class. Click each image to see 
   <div class="col-sm-1"></div>
   <div class="col-sm-5">
 	<a href="glitch-art.html">
-  	  <img src="in-n-out-glitch-exterior.png" class="img-fluid mx-auto d-block" alt="In-N-Out exterior glitched image">
+  	  <img src="images/glitch/in-n-out-glitch-exterior.png" class="img-fluid mx-auto d-block" alt="In-N-Out exterior glitched image">
 	</a>
   </div>
   <div class="col-sm-5">
 	<a href="meme-mashup.html">
-   	  <img src="meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
+   	  <img src="images/meme/meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
 	</a>
   </div>
   <div class="col-sm-1"></div>
@@ -55,12 +55,12 @@ See my recent projects from my Digital Media Art class. Click each image to see 
   <div class="col-sm-1"></div>
   <div class="col-sm-5">
 	<a href="minecraft-sculpture.html">
-   	  <img src="ironman-left-angle.png" class="img-fluid mx-auto d-block" alt="A sculpture made in Minecraft of Ironman's helmet">
+   	  <img src="images/minecraft/ironman-left-angle.png" class="img-fluid mx-auto d-block" alt="A sculpture made in Minecraft of Ironman's helmet">
 	</a>
   </div>
   <div class="col-sm-5">
 	<a href="3d-print.html">
-	  <img src="3d-ironman-helmet.png" class="img-fluid mx-auto d-block" alt="3D printed sculpture of Ironman's helmet">
+	  <img src="images/3d/3d-ironman-helmet.png" class="img-fluid mx-auto d-block" alt="3D printed sculpture of Ironman's helmet">
 	</a>
   </div>
   <div class="col-sm-1"></div>
@@ -70,7 +70,7 @@ See my recent projects from my Digital Media Art class. Click each image to see 
   <div class="col-sm-1"></div>
   <div class="col-sm-5">
 	<a href="net-art.html">
-	  <img src="begin-your-adventure.png" class="img-fluid mx-auto d-block" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure">
+	  <img src="images/net-art/begin-your-adventure.png" class="img-fluid mx-auto d-block" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure">
 	</a>
   </div>
   <div class="col-sm-5"></div>
